--- a/MinerGame/MinerGame.csproj
+++ b/MinerGame/MinerGame.csproj
@@ -50,7 +50,7 @@
     <Compile Include="Rig\Components\Radiator\Radiator.cs" />
     <Compile Include="Rig\Components\RigComponentController.cs" />
     <Compile Include="Rig\Components\Tracks\Tracks.cs" />
-	<Compile Include="Track\Track_Stone.cs" />
+    <Compile Include="Rig\Components\Tracks\Track_Stone.cs" />
     <Compile Include="World\Chunk.cs" />
     <Compile Include="Component.cs" />
     <Compile Include="Cursor.cs" />
@@ -87,7 +87,9 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Track\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
