Added the sprites and classes for the ore exporter the main purchaser of ores in the game. This has been hard coded into the spawn chunk for now along with the stockpile.

--- a/MinerGame/MinerGame.csproj
+++ b/MinerGame/MinerGame.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Buildings\Buildable.cs" />
     <Compile Include="Buildings\Interactable.cs" />
+    <Compile Include="Buildings\OreExporter.cs" />
     <Compile Include="Buildings\StockPile.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Direction.cs" />
