--- a/MinerGame/MinerGame.csproj
+++ b/MinerGame/MinerGame.csproj
@@ -41,10 +41,10 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Buildings\Buildable.cs" />
-    <Compile Include="Buildings\Interactable.cs" />
-    <Compile Include="Buildings\OreExporter.cs" />
-    <Compile Include="Buildings\StockPile.cs" />
+    <Compile Include="Interactable\Buildings\Buildable.cs" />
+    <Compile Include="Interactable\Interactable.cs" />
+    <Compile Include="Interactable\Buildings\OreExporter.cs" />
+    <Compile Include="Interactable\Buildings\StockPile.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Direction.cs" />
     <Compile Include="Items\Inventory.cs" />
@@ -103,7 +103,9 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Interactable\People\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
